# py2puml

./: .coverage  .gitignore  CHANGELOG.md  README.md  README.ru.md  README_py2uml.md  __init__.py  __main__.py  cli.py  cli_direct.py  index.puml  install.sh  main.py  mcp_file_analyzer.py  py2puml.puml  py2uml.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  test_analysis_report.md  test_failure_analysis_report.md  test_report.md  test_syntax_error.py  uml_generator.py  uml_generator_adapter.py
.specification/: README.md  plantuml_notes_examples_simple.puml  plantuml_notes_syntax.md
core/: __init__.py  analyzer.py  file_filter.py  generator.py  parser.py
examples_custom_formatting/: DEMO_RESULTS.md  README.md  SCHEMAS_VIEWER.html  advanced_examples.py  edge_cases.py  sample_classes.py
py2puml.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/app/(platform)/marketplace/search/: page.tsx
test_no_gitignore/src/: example.py
test_project/: .gitignore  broken.gitignore
test_project/src/: main.py
tests/: __init__.py  conftest.py  test_installer.py
tests/edge_cases/: __init__.py  test_edge_cases.py
tests/functional/: test_output_format.py
tests/integration/: test_cli.py  test_describe_file_cli.py  test_gitignore_cli.py
tests/unit/: test_describe_file.py  test_gitignore_functionality.py  test_new_architecture.py  test_uml_generator.py
utils/: __init__.py  error_handling.py
